--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@
           <p><a href="https://www.facebook.com/Dra.MicaelaTaverna" target="_blank"> <i class="fab fa-facebook-f"></i>@Dra.MicaelaTaverna</a></p>
           <p><a href="https://www.instagram.com/dramicaelataverna/" target="_blank"> <i class="fab fa-instagram"></i>@dramicaelataverna</a></p>
           <p><a href="https://wa.me/5491173603003" target="_blank"><i class="fab fa-whatsapp"></i>+(54)9 11 7360-3003</a></p>
-        </div>  
-       <div class="locationMap">
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.456232851054!2d-58.454473185553745!3d-34.56732078046887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d00555cb35%3A0xc4e4d257e30b1b8!2sVirrey%20Olaguer%20y%20Feli%C3%BA%202462%2C%20C1426%20EBB%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1598581412467!5m2!1ses-419!2sar" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-       </div>
-     </div> 
-
+        </div> 
+        <div class="locationMap">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.456232851054!2d-58.454473185553745!3d-34.56732078046887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d00555cb35%3A0xc4e4d257e30b1b8!2sVirrey%20Olaguer%20y%20Feli%C3%BA%202462%2C%20C1426%20EBB%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1598581412467!5m2!1ses-419!2sar" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+        <div class="form">
+          <script type="text/javascript" src="https://form.jotform.com/jsform/202548760214048"></script>
+        </div>
    </div>
     </div>
    <footer class='footerContainer'>
@@ -181,5 +182,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
- </body>
+  </body>
 </html>
